# weekly-exercises

./: README.md
src/python/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  test.py
src/python/data/drawings/: ATMHeist.excalidraw  earnings.excalidraw  slidePuzzle.excalidraw
src/python/inst/: example.py  gameoflife.py
src/python/src/weekly_exercises/: ATMHeist.py  ISBN.py  SGFParsing.py  alphametics.py  armstrongNumbers.py  atbashCipher.py  collatzConjecture.py  complexNumbers.py  earnings.py  gigasecond.py  gradeSchool.py  hangman.py  killerSudokuHelper.py  knapsack.py  listOps.py  luhn.py  minesweeper.py  perfectNumbers.py  puzzleSolver.py  railFenceCipher.py  rationalNumbers.py  slidePuzzle.py  spaceAge.py  spiralMatrix.py  squareRoot.py  ticTacToe.py  utils.py  variableLengthQuantity.py  zebraPuzzle.py
src/python/tests/: test_ATMHeist.py  test_ISBN.py  test_SGFParsing.py  test_alphametics.py  test_armstrongNumbers.py  test_atbashCipher.py  test_binarySearch.py  test_collatzConjecture.py  test_complexNumbers.py  test_earnings.py  test_gigasecond.py  test_gradeSchool.py  test_hangman.py  test_killerSudokuHelper.py  test_knapsack.py  test_listOps.py  test_luhn.py  test_minesweeper.py  test_perfectNumbers.py  test_puzzleSolver.py  test_railFenceCipher.py  test_rationalNumbers.py  test_runLenght.py  test_saddlePoint.py  test_slidePuzzle.py  test_spaceAge.py  test_spiralMatrix.py  test_squareRoot.py  test_ticTacToe.py  test_variableLengthQuantity.py  test_zebraPuzzle.py  tests_rationalNumbers.py
(+140 files in other folders)
