[project]
name = "weekly_exercises"
version = "0.1.0"
description = ""
authors = [{ name = "Faendaaa", email = "lucas.carotta@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-profiling = "^1.8.1"
pytest-cov = "^6.1.1"
snakeviz = "^2.2.2"
typing-extensions = "^4.13.2"
mypy = "^1.15.0"
pylint = "^3.3.7"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "-ra", "-q", "-p", "profiling"]
pythonpath = "./src"
testpaths = ["tests"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = ["src"]
